--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
-<html lang="">
+<!-- This website template was created by : Demi van Run -->
+<html lang="en">
 
 <head>
   <title>Forward Fitness Club</title>
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, inital-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100;200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100;200&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -38,7 +39,8 @@
     <!-- Use the main area to add the main content of the webpages -->
     <main>
       <div class="mobile">
-        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.</p>
+        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+        </p>
 
         <h3>FREE One-Week Trial Membership!</h3>
 
@@ -54,7 +56,8 @@
         </ul>
       </div>
       <div class="tablet-desktop">
-        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.</p>
+        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+        </p>
 
         <p>If you have struggles with getting healthy and
           need the motivation and resources to make a healthy lifestyle change,
