--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
+<!-- This website template was created by : Demi van Run -->
 <html lang="en">
 
 <head>
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, inital-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100;200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100;200&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -101,7 +102,8 @@
         </dl>
 
         <p>For more information about how to stay active, visit
-          <a href="https://www.hhs.gov/fitness/be-active/index.html" target="_blank" class="external-link">U.S. Department of Health and Human Services</a>.
+          <a href="https://www.hhs.gov/fitness/be-active/index.html" target="_blank" class="external-link">U.S.
+            Department of Health and Human Services</a>.
         </p>
       </div>
 
