--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
-<html>
+<!-- This website template was created by : Demi van Run -->
+<html lang="en">
 
 <head>
   <title>Forward Fitness Club</title>
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, inital-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
